--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,21 @@
     <link rel="stylesheet" href="./style/mobile.css">
     <title>GetFlix - Movies</title>
 </head>
+
 <body>
     <div class="title__home">
         <h1 class="title__home--center">GetFlix</h1>
     </div>
+    <header id="header" class="header-container">
+        <span class="header-arrow inactive">&lt;</span>
+        <h1 class="header-title">PlatziMovies</h1>
+        <h1 class="header-title header-title--categoryView inactive">Acción</h1>
+
+        <form id="searchForm" class="header-searchForm">
+            <input type="text" placeholder="Vengadores" />
+            <button>🔍</button>
+        </form>
+    </header>
     <section id="trendingPreview" class="trendingPreview-container">
         <div class="trendingPreview-header">
             <h2 class="trendingPreview-title">Tendencia</h2>
@@ -23,16 +35,26 @@
 
     <section id="categoriesPreview" class="categoriesPreview-container">
         <h2 class="categoriesPreview-title">Categorías</h2>
-    
+
         <article class="categoriesPreview-list">
-          <div class="category-container">
-            <h3 id="id28" class="category-title">Romance</h3>
-          </div>
+            <div class="category-container">
+                <h3 id="id28" class="category-title">Romance</h3>
+            </div>
         </article>
-      </section>
+    </section>
+
+    <section id="genericList" class="genericList-container">
+        <div class="movie-container">
+            <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
+                alt="Nombre de la película" />
+        </div>
+    </section>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secretKey.js"></script>
     <script src="./src/main.js"></script>
+    <script src="./src/navigation.js"></script>
 </body>
+
 </html>
