add function search

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="title__home">
+    <div id='title__home' class="title__home">
         <h1 class="title__home--center">GetFlix</h1>
     </div>
     <header id="header" class="header-container">
