--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
         </article>
     </section>
 
+    <section id="liked" class="liked-container">
+        <div class="liked-header">
+            <h2 class="liked-title">Peliculas favoritas</h2>
+        </div>
+        <article class="liked-movieList">
+            <div class="movie-container">
+                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" alt="nombre de la pelicula" class="movie-img">
+            </div>
+            <div class="movie-container">
+                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" alt="nombre de la pelicula" class="movie-img">
+            </div>
+            <div class="movie-container">
+                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" alt="nombre de la pelicula" class="movie-img">
+            </div>
+        </article> 
+    </section>
+
     <section id="genericList" class="genericList-container">
         <div class="movie-container movie-container--loading"></div>
         <div class="movie-container movie-container--loading"></div>
@@ -80,12 +97,10 @@
                     <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
                         alt="Nombre de la película" />
                 </div>
-
                 <div class="movie-container">
                     <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
                         alt="Nombre de la película" />
                 </div>
-
                 <div class="movie-container">
                     <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
                         alt="Nombre de la película" />
